--- a/index.html
+++ b/index.html
@@ -4,9 +4,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="principal.css">
+    <link rel="stylesheet" href="secciones.css">
+    <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
+    <title>Electro Hogar</title>
 </head>
 <body>
-    <h1>HOLA MUNDE</h1>
+<header class="dtop1">
+    <div class="cabecera1">
+        <div class="cabecera-izq">
+            <img src="IMAGEN/youtube.png" alt="Youtube" width="20px"> &nbsp;
+            <img src="IMAGEN/whatsapp.png" alt="whats App" width="20px">&nbsp;
+            <img src="IMAGEN/facebook.png" alt="FaceBook" width="20px">&nbsp;
+            <img src="IMAGEN/twitter.png" alt="Twitter" width="20px">&nbsp;
+            <img src="IMAGEN/instagram.png" alt="Instagram" width="20px"> 
+        </div>
+        <div class="cabecera-centro"> 
+            <p>SABEMOS QUE ENCONTRARÁS LO QUE ESTAS BUSCANDO ;)</p>
+        </div>
+        <form>
+        <div class="cabecera-der">   
+            <button style="font-size: 11px; height: 22px; width: 90px;">MI CUENTA</button></a>
+            &nbsp;&nbsp;
+            <input type="text" name="busqueda" id="busqueda" placeholder="Buscar..." style="width: 100px;">
+        </div> 
+        </form>   
+    </div>
+    <div class="cabecera2">
+        <div class="logo-texto">
+            <img src="IMAGEN/EH LOGO.png" alt="logo" height="140px" width="280px">
+        </div>
+            <div class="carrito">
+            <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
+            <hr style="color: white; width: 145px;">
+            <p style="text-align: center;">0 Productos - S/. 0.0</p>
+        </div>
+    </div>
+</header> 
+<hr>
+    <div class="slyder">
+        <ul>
+            <li><img src="IMAGEN/img-1.jpg" alt="IMG1"></li>
+            <li><img src="IMAGEN/img-2.jpg" alt="IMG2"></li>
+            <li><img src="IMAGEN/img-3.jpg" alt="IMG3"></li>
+            <li><img src="IMAGEN/img-4.jpg" alt="IMG4"></li>
+        </ul>
+    </div>
+<section class="P-F">
+<div class="barhor">
+    <div class="contenedor">
+        <p>FAVORITOS</p>
+        <ul>
+            <li>DE TEMPORADA</li>
+            <li>OF SEASON</li>
+            <li>DI STAGIONE</li>
+        </ul>
+    </div>
+</div>
+<div class="grid">
+    <div class="bar4x4_1">
+        <div class="favimg1">
+            <img src="IMAGEN/lavadora1.jpg" 
+            alt="lav1" height="150px" width="150px">
+        </div>
+    </div>
+    <div class="bar4x4_2">
+        <div class="favimg2">
+            <img src="IMAGEN/lavadora2.jpg" 
+            alt="lav2" height="150px" width="150px">
+        </div>
+    </div>
+    <div class="bar4x4_3">
+        <div class="favimg3">
+            <img src="IMAGEN/lavadora3.jpg" 
+            alt="lav3" height="150px" width="150px">
+        </div>        
+    </div>
+    <div class="bar4x4_4">
+        <div class="favimg4">
+            <img src="IMAGEN/lavadora4.jpg" 
+            alt="lav4" height="150px" width="150px">
+            <div class="texin4">
+                <p>LAVADORA <br>JPELECTRONIC
+                <br>♥ 457</p>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
+<section class="O-P">
+
+</section><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<section class="S-E">
+
+</section>
+<section class="S-A">
+
+</section>
+
+<footer>
+    <address>
+        <div class="info-contacto">
+        
+        </div>
+    </address>
+    <div class="registro">
+
+    </div>
+</footer>
 </body>
 </html>
