--- a/select-e-info-producto.html
+++ b/select-e-info-producto.html
@@ -124,10 +124,20 @@
       </section>
     </aside> 
     <section>
+          <!--inspiracion: terminar lo mas rapido posible para que puedas dormir :'( '-->
       <article>
+        <div>
           <h1>Samsung</h1>
           <h2>Lavadora 17kg WAt7T626BY</h2>
           <h2>Modelo WAt7T6268Y | Código 391362X</h2>
+        </div>
+        <div>
+          
+          <img src="/IMAGEN/Lavadora_17kg.jpg" alt="Lavadora_17kg">
+          <figcaption>
+            Lavadora 17kg WAt7T626BY
+          </figcaption>
+        </div>
       </article>
       <article>
 
