--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="principal.css">
     <link rel="stylesheet" href="secciones.css">
     <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    
     <title>Electro Hogar</title>
 </head>
 <body>
