--- a/select-e-info-producto.html
+++ b/select-e-info-producto.html
@@ -7,7 +7,7 @@
     <title>Lavadora 17kg WA17T6260BY/ELECTRO-HOGAR</title>
     <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
     <link rel="stylesheet" href="principal.css">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="infproducto.css">
 </head>
 <body>
