--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="principal.css">
     <link rel="stylesheet" href="secciones.css">
-<<<<<<< HEAD
+    <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="IMG/icono_del_navegador.png">
-=======
-    <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    
->>>>>>> ddb6bc12550813db4454fa34f1350324dc302bd2
-    <title>Electro Hogar</title>
+        <title>Electro Hogar</title>
 </head>
 <body>
 <header class="dtop1">
