--- a/index.html
+++ b/index.html
@@ -68,34 +68,100 @@
             <img src="IMAGEN/lavadora1.jpg" 
             alt="lav1" height="150px" width="150px">
         </div>
+        <div class="textin1">
+            <p>LAVADORA <br>JPELECTRONIC
+            <br>♥ 457</p>
+        </div>
     </div>
     <div class="bar4x4_2">
         <div class="favimg2">
             <img src="IMAGEN/lavadora2.jpg" 
             alt="lav2" height="150px" width="150px">
         </div>
+        <div class="textin2">
+            <p>LAVADORA <br>JPELECTRONIC
+            <br>♥ 457</p>
+        </div>
     </div>
     <div class="bar4x4_3">
         <div class="favimg3">
             <img src="IMAGEN/lavadora3.jpg" 
             alt="lav3" height="150px" width="150px">
-        </div>        
+        </div>   
+        <div class="textin3">
+            <p>LAVADORA <br>JPELECTRONIC
+            <br>♥ 457</p>
+        </div>     
     </div>
     <div class="bar4x4_4">
         <div class="favimg4">
             <img src="IMAGEN/lavadora4.jpg" 
             alt="lav4" height="150px" width="150px">
-            <div class="texin4">
+            </div>
+            <div class="textin4">
                 <p>LAVADORA <br>JPELECTRONIC
                 <br>♥ 457</p>
             </div>
-        </div>
     </div>
 </div>
 </section>
 <section class="O-P">
+    <div class="barhor">
+        <div class="contenedor">
+            <p>FAVORITOS</p>
+            <ul>
+                <li>DE TEMPORADA</li>
+                <li>OF SEASON</li>
+                <li>DI STAGIONE</li>
+            </ul>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="bar4x4_1">
+            <div class="favimg1">
+                <img src="IMAGEN/lavadora1.jpg" 
+                alt="lav1" height="150px" width="150px">
+            </div>
+            <div class="textin1">
+                <p>LAVADORA <br>JPELECTRONIC
+                <br>♥ 457</p>
+            </div>
+        </div>
+        <div class="bar4x4_2">
+            <div class="favimg2">
+                <img src="IMAGEN/lavadora2.jpg" 
+                alt="lav2" height="150px" width="150px">
+            </div>
+            <div class="textin2">
+                <p>LAVADORA <br>JPELECTRONIC
+                <br>♥ 457</p>
+            </div>
+        </div>
+        <div class="bar4x4_3">
+            <div class="favimg3">
+                <img src="IMAGEN/lavadora3.jpg" 
+                alt="lav3" height="150px" width="150px">
+            </div>   
+            <div class="textin3">
+                <p>LAVADORA <br>JPELECTRONIC
+                <br>♥ 457</p>
+            </div>     
+        </div>
+        <div class="bar4x4_4">
+            <div class="favimg4">
+                <img src="IMAGEN/lavadora4.jpg" 
+                alt="lav4" height="150px" width="150px">
+                </div>
+                <div class="textin4">
+                    <p>LAVADORA <br>JPELECTRONIC
+                    <br>♥ 457</p>
+                </div>
+        </div>
+    </div>
+</section>
 
-</section><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 <section class="S-E">
 
 </section>
