--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 <section class="O-P">
     <div class="barhor">
         <div class="contenedor">
-            <p>FAVORITOS</p>
+            <p>OFERTAS SOLO </p>
             <ul>
-                <li>DE TEMPORADA</li>
-                <li>OF SEASON</li>
-                <li>DI STAGIONE</li>
+                <li>PARA TI</li>
+                <li>FOUR YOU</li>
+                <li>FÜR DICH</li>
             </ul>
         </div>
     </div>
