--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             alt="lav1" height="150px" width="150px">
         </div>
         <div class="textin1">
-            <p>LAVADORA <br>JPELECTRONIC
-            <br>♥ 457</p>
+            <p>Secadora<br>SensorDry 9kg
+            <br>♥ 666</p>
         </div>
     </div>
     <div class="bar4x4_2">
@@ -79,8 +79,8 @@
             alt="lav2" height="150px" width="150px">
         </div>
         <div class="textin2">
-            <p>LAVADORA <br>JPELECTRONIC
-            <br>♥ 457</p>
+            <p>Lavaseca<br>AddWash™
+            <br>♥ 690</p>
         </div>
     </div>
     <div class="bar4x4_3">
@@ -90,7 +90,7 @@
         </div>   
         <div class="textin3">
             <p>LAVADORA <br>JPELECTRONIC
-            <br>♥ 457</p>
+            <br>♥ 420</p>
         </div>     
     </div>
     <div class="bar4x4_4">
@@ -100,7 +100,7 @@
             </div>
             <div class="textin4">
                 <p>LAVADORA <br>JPELECTRONIC
-                <br>♥ 457</p>
+                <br>♥ 119</p>
             </div>
     </div>
 </div>
