--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         </div>
         <div class="textin1">
             <p>Secadora<br>SensorDry 9kg
-            <br>♥ 666</p>
+            <br>
+            <br> ♥ 666 &nbsp;&nbsp;</p>
         </div>
     </div>
     <div class="bar4x4_2">
@@ -80,7 +81,8 @@
         </div>
         <div class="textin2">
             <p>Lavaseca<br>AddWash™
-            <br>♥ 690</p>
+            <br>
+            <br> ♥ 690 &nbsp;&nbsp;</p>
         </div>
     </div>
     <div class="bar4x4_3">
@@ -89,8 +91,9 @@
             alt="lav3" height="150px" width="150px">
         </div>   
         <div class="textin3">
-            <p>LAVADORA <br>JPELECTRONIC
-            <br>♥ 420</p>
+            <p>Lavadora<br>Fondo especial
+            <br>
+            <br> ♥ 420 &nbsp;&nbsp;</p>
         </div>     
     </div>
     <div class="bar4x4_4">
@@ -99,62 +102,63 @@
             alt="lav4" height="150px" width="150px">
             </div>
             <div class="textin4">
-                <p>LAVADORA <br>JPELECTRONIC
-                <br>♥ 119</p>
+                <p>Lavadora <br>TurboWash 3D
+                <br>
+                <br> ♥ 119 &nbsp;&nbsp;</p>
             </div>
     </div>
 </div>
 </section>
 <section class="O-P">
     <div class="barhor">
-        <div class="contenedor">
+        <div class="contenedor2">
             <p>OFERTAS SOLO </p>
             <ul>
                 <li>PARA TI</li>
                 <li>FOUR YOU</li>
-                <li>FÜR DICH</li>
+                <li>PER A TU</li>
             </ul>
         </div>
     </div>
     <div class="grid">
         <div class="bar4x4_1">
-            <div class="favimg1">
-                <img src="IMAGEN/lavadora1.jpg" 
+            <div class="favimg2">
+                <img src="IMAGEN/lavadora2.jpg" 
                 alt="lav1" height="150px" width="150px">
             </div>
             <div class="textin1">
-                <p>LAVADORA <br>JPELECTRONIC
-                <br>♥ 457</p>
+                <p>Lavaseca<br>AddWash™</p>
+                    <p style="font-size: 15px;">70% Off &nbsp;&nbsp; &nbsp;&nbsp;</p> 
             </div>
         </div>
         <div class="bar4x4_2">
-            <div class="favimg2">
-                <img src="IMAGEN/lavadora2.jpg" 
+            <div class="favimg4">
+                <img src="IMAGEN/lavadora4.jpg" 
                 alt="lav2" height="150px" width="150px">
             </div>
             <div class="textin2">
-                <p>LAVADORA <br>JPELECTRONIC
-                <br>♥ 457</p>
+                <p>Lavadora <br>TurboWash 3D</p>
+                <p style="font-size: 15px;">40% Off &nbsp;&nbsp; &nbsp;&nbsp;</p> 
             </div>
         </div>
         <div class="bar4x4_3">
-            <div class="favimg3">
-                <img src="IMAGEN/lavadora3.jpg" 
+            <div class="favimg1">
+                <img src="IMAGEN/lavadora1.jpg" 
                 alt="lav3" height="150px" width="150px">
             </div>   
             <div class="textin3">
-                <p>LAVADORA <br>JPELECTRONIC
-                <br>♥ 457</p>
+                <p>Secadora<br>SensorDry 9kg</p>
+                <p style="font-size: 15px;">35% Off &nbsp;&nbsp; &nbsp;&nbsp;</p>
             </div>     
         </div>
         <div class="bar4x4_4">
-            <div class="favimg4">
-                <img src="IMAGEN/lavadora4.jpg" 
+            <div class="favimg3">
+                <img src="IMAGEN/lavadora3.jpg" 
                 alt="lav4" height="150px" width="150px">
                 </div>
                 <div class="textin4">
-                    <p>LAVADORA <br>JPELECTRONIC
-                    <br>♥ 457</p>
+                    <p>Lavadora<br>Fondo especial</p>
+                    <p style="font-size: 15px;">90% Off &nbsp;&nbsp; &nbsp;&nbsp;</p>
                 </div>
         </div>
     </div>
