--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <section class="O-P">
     <div class="barhor">
         <div class="contenedor2">
-            <p>OFERTAS SOLO </p>
+            <p>OFERTAS</p>
             <ul>
                 <li>PARA TI</li>
                 <li>FOUR YOU</li>
@@ -128,7 +128,7 @@
             </div>
             <div class="textin1">
                 <p>Lavaseca<br>AddWash™</p>
-                    <p style="font-size: 15px;">70% Off &nbsp;&nbsp; &nbsp;&nbsp;</p> 
+                    <p style="font-size: 15px;"><mark>70% Off</mark> &nbsp;&nbsp; &nbsp;&nbsp;</p> 
             </div>
         </div>
         <div class="bar4x4_2">
@@ -138,7 +138,7 @@
             </div>
             <div class="textin2">
                 <p>Lavadora <br>TurboWash 3D</p>
-                <p style="font-size: 15px;">40% Off &nbsp;&nbsp; &nbsp;&nbsp;</p> 
+                <p style="font-size: 15px;"><mark>50% Off</mark> &nbsp;&nbsp; &nbsp;&nbsp;</p> 
             </div>
         </div>
         <div class="bar4x4_3">
@@ -148,7 +148,7 @@
             </div>   
             <div class="textin3">
                 <p>Secadora<br>SensorDry 9kg</p>
-                <p style="font-size: 15px;">35% Off &nbsp;&nbsp; &nbsp;&nbsp;</p>
+                <p style="font-size: 15px;"><mark>35% Off</mark> &nbsp;&nbsp; &nbsp;&nbsp;</p>
             </div>     
         </div>
         <div class="bar4x4_4">
@@ -158,7 +158,7 @@
                 </div>
                 <div class="textin4">
                     <p>Lavadora<br>Fondo especial</p>
-                    <p style="font-size: 15px;">90% Off &nbsp;&nbsp; &nbsp;&nbsp;</p>
+                    <p style="font-size: 15px;"><mark>90% Off</mark> &nbsp;&nbsp; &nbsp;&nbsp;</p>
                 </div>
         </div>
     </div>
