--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="principal.css">
+    <link rel="stylesheet" href="secciones.css">
+    <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
+        <title>Electro Hogar</title>
 </head>
 <body>
+<header class="dtop1">
+    <div class="cabecera1">
+        <div class="cabecera-izq">
+            <img src="IMAGEN/youtube.png" alt="Youtube" width="20px"> &nbsp;
+            <img src="IMAGEN/whatsapp.png" alt="whats App" width="20px">&nbsp;
+            <img src="IMAGEN/facebook.png" alt="FaceBook" width="20px">&nbsp;
+            <img src="IMAGEN/twitter.png" alt="Twitter" width="20px">&nbsp;
+            <img src="IMAGEN/instagram.png" alt="Instagram" width="20px"> 
+        </div>
+        <div class="cabecera-centro"> 
+            <p>SABEMOS QUE ENCONTRARÁS LO QUE ESTAS BUSCANDO ;)</p>
+        </div>
+        <form>
+        <div class="cabecera-der">   
+            <button style="font-size: 11px; height: 22px; width: 90px;">MI CUENTA</button></a>
+            &nbsp;&nbsp;
+            <input type="text" name="busqueda" id="busqueda" placeholder="Buscar..." style="width: 100px;">
+        </div> 
+        </form>   
+    </div>
+    <div class="cabecera2">
+        <div class="logo-texto">
+            <img src="IMAGEN/EH LOGO.png" alt="logo" height="140px" width="280px">
+        </div>
+            <div class="carrito">
+            <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
+            <hr style="color: white; width: 145px;">
+            <p style="text-align: center;">0 Productos - S/. 0.0</p>
+        </div>
+    </div>
+</header> 
     
 </body>
 </html>
