--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </div>
 </section>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <section class="S-E">
 
@@ -180,14 +180,24 @@
 </section>
 
 <footer>
+    <div class="monsa">
     <address>
         <div class="info-contacto">
-        
+        GRUPO 1 , ELECTRO-HOGAR S.A. <br>
+        <a href="">electrohogar@electrohogar.com</a><br>
+        Calle Arenas 230 , Villa Humedales - Indonesia <br>
+        +62 66518-9214 
+        </div>
+        <div class="botoncontactanos">
+        <button>CONTACTANOS</button>
         </div>
     </address>
-    <div class="registro">
-
-    </div>
-</footer>
+</div>
+<div class="certus">
+    <span class="registro">
+        Todos los derechos reservados ELECTRO-HOGAR S.A. 2019
+    </span>
+</div>
+</footer> 
 </body>
 </html>
