--- a/index.html
+++ b/index.html
@@ -31,16 +31,33 @@
         </div> 
         </form>   
     </div>
-    <div class="cabecera2">
+    <nav id="" class="navegacion">
         <div class="logo-texto">
             <img src="IMAGEN/EH LOGO.png" alt="logo" height="140px" width="280px">
         </div>
-            <div class="carrito">
-            <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
-            <hr style="color: white; width: 145px;">
-            <p style="text-align: center;">0 Productos - S/. 0.0</p>
-        </div>
+        <ul id="" class="menu">
+          <li><a href="index.html"><b>HOME</b></a></li> |
+          <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
+          <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
+            <ul class="submenu">
+              <li><a href="">LG</a></li>
+              <li><a href="">BOSH</a></li>
+              <li><a href="">ELECTROLUZ</a></li>
+              <li><a href="">SAMSUNG</a></li>
+              <li><a href="">MABE</a></li>
+              <li><a href="">WINIA</a></li>
+              <li><a href="">PANASONIC</a></li>
+              <li><a href="">MIRAY</a></li>
+              <li><a href="">COLUMBIA</a></li>
+            </ul>
+          </li>
+       </ul>
+       <div class="carrito">
+        <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
+        <hr style="color: white; width: 145px;">
+        <p style="text-align: center;">0 Productos - S/. 0.0</p>
     </div>
+      </nav>
 </header> 
 <hr>
     <div class="slyder">
@@ -55,7 +72,7 @@
 <div class="barhor">
     <div class="contenedor">
         <p>FAVORITOS</p>
-        <ul>
+        <ul class="listt">
             <li>DE TEMPORADA</li>
             <li>OF SEASON</li>
             <li>DI STAGIONE</li>
@@ -113,8 +130,8 @@
     <div class="barhor">
         <div class="contenedor2">
             <p>OFERTAS</p>
-            <ul>
-                <li>PARA TI</li>
+            <ul class="list">
+                <li class="list2">PARA TI</li>
                 <li>FOUR YOU</li>
                 <li>PER A TU</li>
             </ul>
