--- a/prueba.html
+++ b/prueba.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">  
 <head>    
-    <title>Título de la WEB</title>    
+    <title>electroh.prueba</title>    
     <meta charset="UTF-8">
     <meta name="title" content="Título de la WEB">
     <meta name="description" content="Descripción de la WEB">    
-    <link href="estilos.css" rel="stylesheet">    
+    <link href="prueba.css" rel="stylesheet">    
+    <link href="estilo.css" rel="stylesheet"> 
 </head>  
 <body>    
     <header>
@@ -30,5 +31,63 @@
         <a href="#">Facebook</a>
         <a href="#">Tiwtter</a>
     </footer>
+
+    <nav id="" class="navegacion">
+        <div class="logo-texto">
+            <img src="IMAGEN/EH LOGO.png" alt="logo" height="140px" width="280px">
+        </div>
+        <ul id="" class="menu">
+          <li><a href="index.html"><b>HOME</b></a></li> |
+          <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
+          <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
+            <ul class="submenu">
+              <li><a href="">LG</a></li>
+              <li><a href="">BOSH</a></li>
+              <li><a href="">ELECTROLUZ</a></li>
+              <li><a href="">SAMSUNG</a></li>
+              <li><a href="">MABE</a></li>
+              <li><a href="">WINIA</a></li>
+              <li><a href="">PANASONIC</a></li>
+              <li><a href="">MIRAY</a></li>
+              <li><a href="">COLUMBIA</a></li>
+            </ul>
+          </li>
+       </ul>
+       <div class="carrito">
+        <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
+        <hr style="color: white; width: 145px;">
+        <p style="text-align: center;">0 Productos - S/. 0.0</p>
+    </div>
+      </nav>
+
+      <div class="imagen2">
+        <img src="./LG-Logotipo-1995-2014.png" alt="imagen dos">
+    </div>
+
+    <div class="imagen1">
+        <img src="./descarga 1.png" alt="imagen uno">
+    </div>
+
+
+    <section>
+        <div class="division1">
+            <h2>NO TE OLVIDES DE VISITAR NUESTRA</h2>
+        </div>
+
+        <div class="division2">
+            <h1><b>SECCION <br>
+                EMPRESAS</b></h1>
+        </div>
+
+        <div class="division3">
+            <p> <b>
+              AQUÍ ENCONTRARÁS DIVERSAS FORMAS DE USAR <br>
+            TUS PRODUCTOS Y ALARGAR EL TIEMPO DE VIDA
+            </b></p>
+        </div>
+
+    </section>
+
+
 </body>  
 </html>
