--- a/prueba.html
+++ b/prueba.html
@@ -61,11 +61,11 @@
       </nav>
 
       <div class="imagen2">
-        <img src="./LG-Logotipo-1995-2014.png" alt="imagen dos">
+        <img src="IMAGEN/LG-Logotipo-1995-2014.png" alt="imagen dos">
     </div>
 
     <div class="imagen1">
-        <img src="./descarga 1.png" alt="imagen uno">
+        <img src="IMAGEN/descarga 1.png" alt="imagen uno">
     </div>
 
 
