--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
     
 </section>
 <section class="S-A">
-    <div class="prueba" width="170px">
+    <div class="prueba">
         <span class="laundry pag"><a href="https://www.etsy.com/es/?ref=lgo"><h3>Click here: Encuentra cosas que te enamoren. Apoya a vendedores independientes. Solo en Etsy.</h3></a></span>
-        <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryWhash.jpg" alt="" width="165px"></a></div>
-        <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryDry.jpg" alt="" width="165px"></a></div>
-        <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryFold.jpg" alt="" width="165px"></a></div>
-        <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryRepeat.jpg" alt="" width="165px"></a></div>
+        <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryWhash.jpg" alt="" width="150px" height="200px"></a></div>
+        <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryDry.jpg" alt="" width="150px" height="200px"></a></div>
+        <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryFold.jpg" alt="" width="150px"height="200px"></a></div>
+        <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryRepeat.jpg" alt="" width="150px" height="200px"></a></div>
     </div>
 </section>
 
