--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -31,17 +31,60 @@
         </div> 
         </form>   
     </div>
-    <div class="cabecera2">
+    <nav id="" class="navegacion">
         <div class="logo-texto">
             <img src="IMAGEN/EH LOGO.png" alt="logo" height="140px" width="280px">
         </div>
-            <div class="carrito">
-            <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
-            <hr style="color: white; width: 145px;">
-            <p style="text-align: center;">0 Productos - S/. 0.0</p>
+        <ul id="" class="menu">
+          <li><a href="index.html"><b>HOME</b></a></li> |
+          <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
+          <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
+            <ul class="submenu">
+            <li><a href="">LG</a></li>
+             <li><a href="">BOSH</a></li>
+              <li><a href="">ELECTROLUZ</a></li>
+              <li><a href="">SAMSUNG</a></li>
+              <li><a href="">MABE</a></li>
+              <li><a href="">WINIA</a></li>
+              <li><a href="">PANASONIC</a></li>
+              <li><a href="">MIRAY</a></li>
+              <li><a href="">COLUMBIA</a></li>
+            </ul>
+          </li>
+       </ul>
+       <div class="carrito">
+        <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
+        <hr style="color: white; width: 145px;">
+        <p style="text-align: center;">0 Productos - S/. 0.0</p>
         </div>
-    </div>
+    </nav>
 </header> 
-    
+
+
+    <h3>MARCA</h3>
+
+    <h4>PRECIO</h4>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<footer>
+    <div class="monsa">
+        <address>
+            <div class="info-contacto">
+            GRUPO 1 , ELECTRO-HOGAR S.A. <br>
+            <a href="">electrohogar@electrohogar.com</a><br>
+            Calle Arenas 230 , Villa Humedales - Indonesia <br>
+            +62 66518-9214 
+            </div>
+            <div class="botoncontactanos">
+            <button>CONTACTANOS</button>
+            </div>
+        </address>
+    </div>
+    <div class="certus">
+        <span class="registro">
+            Todos los derechos reservados ELECTRO-HOGAR S.A. 2019
+        </span>
+    </div>
+</footer> 
 </body>
 </html>
