--- a/sección-lavandería.html
+++ b/sección-lavandería.html
@@ -1,20 +1,90 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ELECTROHOGAR</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="principal.css">
+    <link rel="stylesheet" href="secciones.css">
+    <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
+        <title>Lavandería</title>
 </head>
 <body>
-    <h1>ELECTRO-HOGAR</h1>
-
-    <h2>SECCION LAVANDERIA</h2>
+<header class="dtop1">
+    <div class="cabecera1">
+        <div class="cabecera-izq">
+            <img src="IMAGEN/youtube.png" alt="Youtube" width="20px"> &nbsp;
+            <img src="IMAGEN/whatsapp.png" alt="whats App" width="20px">&nbsp;
+            <img src="IMAGEN/facebook.png" alt="FaceBook" width="20px">&nbsp;
+            <img src="IMAGEN/twitter.png" alt="Twitter" width="20px">&nbsp;
+            <img src="IMAGEN/instagram.png" alt="Instagram" width="20px"> 
+        </div>
+        <div class="cabecera-centro"> 
+            <p>SABEMOS QUE ENCONTRARÁS LO QUE ESTAS BUSCANDO ;)</p>
+        </div>
+        <form>
+        <div class="cabecera-der">   
+            <button style="font-size: 11px; height: 22px; width: 90px;">MI CUENTA</button></a>
+            &nbsp;&nbsp;
+            <input type="text" name="busqueda" id="busqueda" placeholder="Buscar..." style="width: 100px;">
+        </div> 
+        </form>   
+    </div>
+    <nav id="" class="navegacion">
+        <div class="logo-texto">
+            <img src="IMAGEN/EH LOGO.png" alt="logo" height="140px" width="280px">
+        </div>
+        <ul id="" class="menu">
+          <li><a href="index.html"><b>HOME</b></a></li> |
+          <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
+          <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
+            <ul class="submenu">
+            <li><a href="">LG</a></li>
+             <li><a href="">BOSH</a></li>
+              <li><a href="">ELECTROLUZ</a></li>
+              <li><a href="">SAMSUNG</a></li>
+              <li><a href="">MABE</a></li>
+              <li><a href="">WINIA</a></li>
+              <li><a href="">PANASONIC</a></li>
+              <li><a href="">MIRAY</a></li>
+              <li><a href="">COLUMBIA</a></li>
+            </ul>
+          </li>
+       </ul>
+       <div class="carrito">
+        <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
+        <hr style="color: white; width: 145px;">
+        <p style="text-align: center;">0 Productos - S/. 0.0</p>
+        </div>
+    </nav>
+</header> 
 
 
     <h3>MARCA</h3>
 
     <h4>PRECIO</h4>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<footer>
+    <div class="monsa">
+        <address>
+            <div class="info-contacto">
+            GRUPO 1 , ELECTRO-HOGAR S.A. <br>
+            <a href="">electrohogar@electrohogar.com</a><br>
+            Calle Arenas 230 , Villa Humedales - Indonesia <br>
+            +62 66518-9214 
+            </div>
+            <div class="botoncontactanos">
+            <button>CONTACTANOS</button>
+            </div>
+        </address>
+    </div>
+    <div class="certus">
+        <span class="registro">
+            Todos los derechos reservados ELECTRO-HOGAR S.A. 2019
+        </span>
+    </div>
+</footer> 
 </body>
 </html>
