--- a/sección-lavandería.html
+++ b/sección-lavandería.html
@@ -68,10 +68,16 @@
 
     <section>
         <div class="prdNuno">
-            <img src="IMAGEN/lavadora1.jpg" alt="">
+            
         </div>
-        <div class="prdNdos">
-            <img src="IMAGEN/lavadora2.jpg" alt="">
+        <div class="prdNdos" >
+            <img src="IMAGEN/lavadora1.jpg" alt="DV90K6800EX Secadora SensorDry 9 kg" height="200px" width="200px" >
+            <p>DV90K6800EX Secadora SensorDry 9 kg</p>
+            <br>
+            <p>SensorDry,
+                Función Esterilizar,
+                Función Antiarrugas
+            </p>
         </div>
         <div class="prdNtres">
 
