--- a/prueba.html
+++ b/prueba.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="title" content="Título de la WEB">
     <meta name="description" content="Descripción de la WEB">    
-    <link href="prueba.css" rel="stylesheet">    
-    <link href="estilo.css" rel="stylesheet"> 
+    <link href="CSS/prueba.css" rel="stylesheet">    
+    <link href="CSS/estilo.css" rel="stylesheet"> 
 </head>  
 <body>    
     <header>
