--- a/sección-lavandería.html
+++ b/sección-lavandería.html
@@ -63,7 +63,61 @@
 </header>   
 <section>
     <aside>
-
+        <ul class="tabla_filtro">
+            <li><div class="clasificacion_filtro"> Marca</div>
+                <ul class="filtro">
+                <li><input type="checkbox" name="filtro" id="LG">
+                <label for="LG">LG</label></li>
+                <li><input type="checkbox" name="filtro" id="BOSH">
+                <label for="LG">BOSH</label></li>
+                <li><input type="checkbox" name="filtro" id="ELECTROLUZ">
+                <label for="LG">ELECTROLUZ</label></li>
+                <li><input type="checkbox" name="filtro" id="SAMSUNG">
+                <label for="LG">SAMSUNG</label></li>
+                <li><input type="checkbox" name="filtro" id="MABE">
+                <label for="LG">MABE</label></li>
+                <li><input type="checkbox" name="filtro" id="WINIA">
+                <label for="LG">WINIA</label></li>
+                <li><input type="checkbox" name="filtro" id="PANASONIC">
+                <label for="LG">PANASONIC</label></li>
+                <li><input type="checkbox" name="filtro" id="MIRAY">
+                <label for="LG">MIRAY</label></li>
+                <li><input type="checkbox" name="filtro" id="COLUMBIA">
+                <label for="LG">COLUMBIA</label></li>
+                </ul>
+            </li>
+            <li><div class="clasificacion_filtro">Precio</div>
+               <ul class="filtro">
+                 <li><input type="checkbox" name="filtro" id="precio1">
+                   <label for="precio1">S/.0.00-S/.799.99</label></li>
+                 <li><input type="checkbox" name="filtro" id="precio2">
+                   <label for="precio2">S/.800.00-S/.999.99</label></li>
+                 <li><input type="checkbox" name="filtro" id="precio3">
+                   <label for="precio3">S/.1,000.00-S/.1,199.99</label></li>
+                 <li><input type="checkbox" name="filtro" id="precio4">
+                   <label for="precio4">S/.1,200.00-S/.1,399.99</label></li>
+                 <li><input type="checkbox" name="filtro" id="precio5">
+                   <label for="precio5">S/.1,400.00-S/.1,799.99</label></li>
+                 <li><input type="checkbox" name="filtro" id="precio6">
+                   <label for="precio6">S/.1,800.00-2,199.99</label></li>
+                 <li><input type="checkbox" name="filtro" id="precio7">
+                   <label for="precio7">S/.2,200.00-superior</label></li>
+               </ul>
+              </li>
+              <li><div class="clasificacion_filtro" >Color</div>
+                <ul class="filtro">
+                  <li><input type="checkbox" name="filtro" id="color1">
+                   <label for="color1">NEGRO</label></li>
+                  <li><input type="checkbox" name="filtro" id="color1">
+                   <label for="color1">BLANCO</label></li>
+                  <li><input type="checkbox" name="filtro" id="color1">
+                   <label for="color1">GRIS</label></li>
+                  <li><input type="checkbox" name="filtro" id="color1">
+                   <label for="color1">PLATEADO</label></li>
+                </ul>
+              </li>
+             </ul>
+        </aside> 
     </aside>
 
     <section>
