--- a/prueba.html
+++ b/prueba.html
@@ -6,88 +6,25 @@
     <meta name="title" content="Título de la WEB">
     <meta name="description" content="Descripción de la WEB">    
     <link href="CSS/prueba.css" rel="stylesheet">    
-    <link href="CSS/estilo.css" rel="stylesheet"> 
+
 </head>  
-<body>    
-    <header>
-        <h1>Título de la WEB</h1>      
-    </header>    
-    <nav>
-        <a href="#">IR SECCIÓN 2</a>
-        <a href="#">IR SECCIÓN 3</a>
-    </nav>
-    <section>      
-        <article>
-            <h2>CONTENIDO PRINCIPAL</h2>
-            <p>Este es el contenido principal de mi web.</p>      
-        </article>      
-    </section>
-    <aside>
-        <h3>Testimonios</h3>
-        <p>Me gusta mucho esta página.</p>
-    </aside>
-    <footer>
-        <h4>Redes sociales</h4>
-        <a href="#">Facebook</a>
-        <a href="#">Tiwtter</a>
-    </footer>
-
-    <nav id="" class="navegacion">
-        <div class="logo-texto">
-            <img src="IMAGEN/EH LOGO.png" alt="logo" height="140px" width="280px">
-        </div>
-        <ul id="" class="menu">
-          <li><a href="index.html"><b>HOME</b></a></li> |
-          <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
-          <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
-            <ul class="submenu">
-              <li><a href="">LG</a></li>
-              <li><a href="">BOSH</a></li>
-              <li><a href="">ELECTROLUZ</a></li>
-              <li><a href="">SAMSUNG</a></li>
-              <li><a href="">MABE</a></li>
-              <li><a href="">WINIA</a></li>
-              <li><a href="">PANASONIC</a></li>
-              <li><a href="">MIRAY</a></li>
-              <li><a href="">COLUMBIA</a></li>
-            </ul>
-          </li>
-       </ul>
-       <div class="carrito">
-        <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
-        <hr style="color: white; width: 145px;">
-        <p style="text-align: center;">0 Productos - S/. 0.0</p>
+<body>
+    <div class="imagen_LG">
+    <img src="IMAGEN/11111111_LG.jpg" alt="lavadora LG">
     </div>
-      </nav>
+    <div class="division_imagen_LG">
 
-      <div class="imagen2">
-        <img src="IMAGEN/LG-Logotipo-1995-2014.png" alt="imagen dos">
+        <section class="seccion">
+        <h1>LG</h1>
+        <h2>Lavadora 19kg WT19VS8</h2>
+        <p class="tarea_1">  <b> (2) <br> </p>
+        <p>  s/.  1,6400 c/u <br> </p>
+        <p>   Disponible para despacho <br> </p>
+        <p> Disponible para retiro </p>
+        </b>
+        </section>
+       
     </div>
-
-    <div class="imagen1">
-        <img src="IMAGEN/descarga 1.png" alt="imagen uno">
-    </div>
-
-
-    <section>
-        <div class="division1">
-            <h2>NO TE OLVIDES DE VISITAR NUESTRA</h2>
-        </div>
-
-        <div class="division2">
-            <h1><b>SECCION <br>
-                EMPRESAS</b></h1>
-        </div>
-
-        <div class="division3">
-            <p> <b>
-              AQUÍ ENCONTRARÁS DIVERSAS FORMAS DE USAR <br>
-            TUS PRODUCTOS Y ALARGAR EL TIEMPO DE VIDA
-            </b></p>
-        </div>
-
-    </section>
-
-
-</body>  
+</body>
+</html>
 </html>
