--- a/product02.html
+++ b/product02.html
@@ -70,24 +70,12 @@
              <ul class="tabla_filtro">
                <li><div class="clasificacion_filtro"> Marca</div>
                  <ul class="filtro">
-                   <li><input type="checkbox" name="filtro" id="LG">
-                    <label for="LG">LG</label></li>
-                   <li><input type="checkbox" name="filtro" id="BOSH">
-                    <label for="LG">BOSH</label></li>
-                   <li><input type="checkbox" name="filtro" id="ELECTROLUZ">
-                    <label for="LG">ELECTROLUZ</label></li>
-                   <li><input type="checkbox" name="filtro" id="SAMSUNG">
-                    <label for="LG">SAMSUNG</label></li>
-                   <li><input type="checkbox" name="filtro" id="MABE">
-                    <label for="LG">MABE</label></li>
-                   <li><input type="checkbox" name="filtro" id="WINIA">
-                    <label for="LG">WINIA</label></li>
-                   <li><input type="checkbox" name="filtro" id="PANASONIC">
-                    <label for="LG">PANASONIC</label></li>
-                   <li><input type="checkbox" name="filtro" id="MIRAY">
-                    <label for="LG">MIRAY</label></li>
-                   <li><input type="checkbox" name="filtro" id="COLUMBIA">
-                    <label for="LG">COLUMBIA</label></li>
+                  <ul class="filtro">
+                    <li><input type="checkbox" name="filtro" id="LG">
+                     <label for="LG">LG</label></li>
+                    <li><input type="checkbox" name="filtro" id="SAMSUNG">
+                     <label for="LG">SAMSUNG</label></li>
+                  </ul>
                  </ul>
                </li>
                <li><div class="clasificacion_filtro">Precio</div>
