imagenes nav ventanas

--- a/prueba-jr.html
+++ b/prueba-jr.html
@@ -8,6 +8,61 @@
     <link rel="stylesheet" href="/CSS/prueba-jr.css">
 </head>
 <body>
-    table>
+    <div id="contenedor_FT">
+<table>
+    <HEAder>
+        <figcaption id="titulofichat">
+        FICHA TÉNICA
+        </figcaption>
+    </HEAder>
+    <tr>
+        <td>CARACTERÍSTICAS</td>
+        <td>SensorDry <br><br>
+            Función Esterilizar <br><br>
+            Función Antiarrugas 
+        </td>
+    </tr>
+    <tr>
+        <td>Especificaciones</td>
+        <td>Capacidad de secado <br>
+            9 Kg 
+            <br><br>
+            Especificaciones físicas <br>
+            600 x 850 x 655 mm
+            <br><br>
+            Peso neto <br>
+            40.4 kg
+            <br><br>
+            Tipo de tambor <br>
+            Tambor de diamante
+            <br><br>
+            Tipo de secadora <br>
+            Ventilación
+            <br><br>
+            </td>
+    </tr>
+    <tr>
+        <td>Lista de opciones</td>
+        <td>Alarma de carga mixta, antiarrugas, mi ciclo,<br>
+            ajuste de tiempo, sonido, bloqueo para niños, luz del tambor</td>
+    </tr>
+    </table>
+</div>
+<div id="contenedor_FT_T">
+    <p>hola mundo</p>
+    <div id="contenedor_FT_T_top">
+        <button>SAMSUNG</button>
+        <P>Conoce más...</P>
+    </div>
+    <div id="contenedor_FT_T_centro">
+        <img src="IMAGEN/ECOFRIEND.png" alt="ecofriend" height="80px" width="80px">
+        <img src="IMAGEN/TECNOLOGÍA.png" alt="tecnología" height="80px" width="80px">
+        <img src="IMAGEN/motor-samsung.png" width="100px" height="100px" alt="motor-s" id="contenedor_FT_T_centro_botonS">
+    </div>
+    <div id="contenedor_FT_T_final">
+
+    </div>
+</div>
+
 </body>
 </html>
