--- a/product02.html
+++ b/product02.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/principal.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/infproducto.css">
+    <link rel="stylesheet" href="CSS/secciones.css">
 </head>
 <body>
   <header class="dtop1">
@@ -111,6 +112,7 @@
               </ul>
       </aside> 
       <article class="produtoanddescription">
+        <div>
           <div>
             <h1>Samsung</h1>
             <h3>Lavadora 17kg WAt7T626BY</h3>
@@ -122,20 +124,31 @@
             Lavadora 17kg WAt7T626BY
             </figcaption>
           </div>
-          <div>
-            <h1>
-            *Nota Interesante*
-            </h1>
-            <p>Mafalda tiene su origen en una campaña publicitario por Irokman
-             el 15 Dic 2012 la empresa argentina Siam Di Tella necesitaba promocionar
-             la nueva línea de elecrodomésticos Mansfield, unas lavadoras. Querían una
-             historieta que combinara el estilo de Peanuts con Blondie, publicitara los
-              productos de manera «encubierta»,<a href="https://www.nosabesnada.com/noticias/lavadoras/">Seguir leyendo....</a><br>
-              Publicado:<br>
-              Hace 3 tres días por Grupo 1(OwO)
-            </p>
-          
-          </div>
+        </div>
+        <div id="tb_cap">
+            <legend>Opciones de Entrega</legend>
+            <div>
+              <img src="" alt="homicilio">
+              <div>
+                <h4>DISPONIBLE</h4>
+                <P>Despacho a domicilio</P>
+              </div>
+            </div>
+            <div>
+              <img src="" alt="retiro">
+              <div>
+                <h4>NO DISPONIBLE</h4>
+                <P>Retiro en tienda</P>
+              </div>
+            </div>
+            <div>
+              <img src="" alt="stock">
+              <div>
+                <h4>NO DISPONIBLE</h4>
+                <P>Stock ene tienda</P>
+              </div>
+            </div>
+        </div>
      </article>
      </section>
         
