--- a/product02.html
+++ b/product02.html
@@ -125,29 +125,31 @@
             </figcaption>
           </div>
         </div>
-        <div id="tb_cap">
+        <div id="tb_cap" height="150px" width="150px">
+          <form action=""></form>
             <legend>Opciones de Entrega</legend>
             <div>
-              <img src="" alt="homicilio">
-              <div>
+              <img src="" alt="domicilio">
+              <div id="domicilio">
                 <h4>DISPONIBLE</h4>
                 <P>Despacho a domicilio</P>
               </div>
             </div>
-            <div>
+            <div id="retiro">
               <img src="" alt="retiro">
               <div>
                 <h4>NO DISPONIBLE</h4>
                 <P>Retiro en tienda</P>
               </div>
             </div>
-            <div>
+            <div id="stock">
               <img src="" alt="stock">
               <div>
                 <h4>NO DISPONIBLE</h4>
                 <P>Stock ene tienda</P>
               </div>
             </div>
+          </form>
         </div>
      </article>
      </section>
