--- a/pueba_producto.html
+++ b/pueba_producto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     hi
-    <div id="cuerpo" height: 170px >
+    <div id="cuerpo" height:"170px" >
         <div id="bloque1">
             
         </div>
