--- a/prueba-jr.html
+++ b/prueba-jr.html
@@ -5,62 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prueba-jr</title>
+
     <link rel="stylesheet" href="/CSS/prueba-jr.css">
+    <script src="JS/prueba-jr.js" defer></script>
 </head>
 <body>
-    <div id="contenedor_FT">
-<table>
-    <HEAder>
-        <figcaption id="titulofichat">
-        FICHA TÉNICA
-        </figcaption>
-    </HEAder>
-    <tr>
-        <td>CARACTERÍSTICAS</td>
-        <td>SensorDry <br><br>
-            Función Esterilizar <br><br>
-            Función Antiarrugas 
-        </td>
-    </tr>
-    <tr>
-        <td>Especificaciones</td>
-        <td>Capacidad de secado <br>
-            9 Kg 
-            <br><br>
-            Especificaciones físicas <br>
-            600 x 850 x 655 mm
-            <br><br>
-            Peso neto <br>
-            40.4 kg
-            <br><br>
-            Tipo de tambor <br>
-            Tambor de diamante
-            <br><br>
-            Tipo de secadora <br>
-            Ventilación
-            <br><br>
-            </td>
-    </tr>
-    <tr>
-        <td>Lista de opciones</td>
-        <td>Alarma de carga mixta, antiarrugas, mi ciclo,<br>
-            ajuste de tiempo, sonido, bloqueo para niños, luz del tambor</td>
-    </tr>
-    </table>
+<div id="nav_ventanas_menu">
+    <p data-target="#contenedor_FT">Ficha Técnica</p>
+    <p data-target="#contenedor_tec">Descripción</p>
 </div>
-<div id="contenedor_FT_T">
-    <p>hola mundo</p>
-    <div id="contenedor_FT_T_top">
-        <button>SAMSUNG</button>
-        <P>Conoce más...</P>
+<div class="nav_ventanas">
+    <div data-content id="contenedor_FT" class="active">
+        <h1>Ficha Técnica</h1>
+        <br>
+        <table id="tablafichat">
+            <tr>
+                <th id="tablafichat_carac">CARACTERÍSTICAS</th>
+                <td id="tablafichat_carac_desc1">SensorDry <br><br>
+                Función Esterilizar <br><br>
+                Función Antiarrugas 
+                </td>
+            </tr>
+            <tr>
+                <th id="tablafichat_esp">ESPECIFICACIONES</th>
+                <td id="tablafichat_esp_desc2">Capacidad de secado <br>
+                9 Kg 
+                <br><br>
+                Especificaciones físicas <br>
+                600 x 850 x 655 mm
+                <br><br>
+                Peso neto <br>
+                40.4 kg
+                <br><br>
+                Tipo de tambor <br>
+                Tambor de diamante
+                <br><br>
+                Tipo de secadora <br>
+                Ventilación
+                </td>
+            </tr>
+            <tr>
+            <th id="tablafichat_list">LISTA DE OPCIONES</th>
+            <td id="tablafichat_list_desc3">Alarma de carga mixta, antiarrugas, mi ciclo,<br>
+            ajuste de tiempo, sonido, bloqueo para niños, luz del tambor</td>
+        </tr>
+        </table>
     </div>
-    <div id="contenedor_FT_T_centro">
-        <img src="IMAGEN/ECOFRIEND.png" alt="ecofriend" height="80px" width="80px">
-        <img src="IMAGEN/TECNOLOGÍA.png" alt="tecnología" height="80px" width="80px">
-        <img src="IMAGEN/motor-samsung.png" width="100px" height="100px" alt="motor-s" id="contenedor_FT_T_centro_botonS">
-    </div>
-    <div id="contenedor_FT_T_final">
-
+    <br>
+    <div data-content id="contenedor_tec">
+        <h1>Descripción</h1>
+        <br>
+        <div id="contenedor_tec_sup">
+            <button id="contenedor_tec_sup_boton">SAMSUNG</button>
+            <a href="https://www.samsung.com/es/tecnologiaconproposito/" id="contenedor_tec_sup_texto">Conoce más...</a>
+        </div>
+        <div id="contenedor_tec_cent">
+            <div id="contenedor_tec_cent_1">
+                <img src="IMAGEN/ECOFRIEND.png" alt="ecofriend" height="100px" width="100px">
+                <p>Ecologico</p>
+            </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="contenedor_tec_cent_2">
+                <img src="IMAGEN/TECNOLOGÍA.png" alt="tecnología" height="100px" width="100px">
+                <p>Tecnología</p>
+            </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="contenedor_tec_cent_3">
+                <img src="IMAGEN/motor-samsung.png" width="100px" height="100px" alt="motor-s" id="contenedor_FT_T_centro_botonS">
+                <p>Motor</p>
+            </div>
+        </div>
+        <div id="contenedor_tec_fin">
+            <p id="contenedor_tec_fin_texto">Dolor nostrud aute nulla ex consequat cupidatat. <br>
+            In et amet tempor Lorem cupidatat ullamco quis consectetur incididunt Lorem excepteur. <br>
+            Cillum ad aliquip veniam eu magna Lorem non ipsum voluptate id deserunt.<br>
+            Proident voluptate ut sit quis reprehenderit. Eu do cillum minim eu ex voluptate labore anim duis ut.</p>
+        </div>
     </div>
 </div>
 
