--- a/product02.html
+++ b/product02.html
@@ -125,26 +125,30 @@
             </figcaption>
           </div>
         </div>
-        <div id="tb_cap" height="10px" width="300px">
-          
-            <legend>Opciones de Entrega</legend>
-            <div id="domicilio">
-              <img src="" alt="domicilio">
-              <div>
+        <div id="tabladecap">
+          <div id="tb_cap"  >
+            <div>
+              <legend>Opciones de Entrega</legend>
+              <div id="domicilio">
+                <div><img src="" alt="domicilio"></div>
                 <div><h4>DISPONIBLE</h4></div>
-                <div></div><P>Despacho a domicilio</P></div>
+                <div><P>Despacho a domicilio</P></div>
+              </div>
+              <div id="retiro">
+                <div><img src="" alt="retiro"></div>
+                <div><h4>NO DISPONIBLE</h4></div>
+                <div><P>Retiro en tienda</P></div>
+              </div>
+              <div id="stock">
+                <div><img src="" alt="stock"></div>
+                <div><h4>NO DISPONIBLE</h4></div>
+                <div><P>Stock ene tienda</P></div> 
               </div>
             </div>
-            <div id="retiro">
-              <div><img src="" alt="retiro"></div>
-              <div><h4>NO DISPONIBLE</h4></div>
-              <div><P>Retiro en tienda</P></div>
-            </div>
-            <div id="stock">
-              <div><img src="" alt="stock"></div>
-              <div><h4>NO DISPONIBLE</h4></div>
-              <div><P>Stock ene tienda</P></div> 
-            </div>
+          </div>
+          <div id="tr_cond">
+            <p><a href="#">Cambios y Condiciones</a> en nuestras tiendas a nivel nacional</p>
+          </div>
           
         </div>
      </article>
