agregué p al footer y correción de colores

--- a/index.html
+++ b/index.html
@@ -212,23 +212,23 @@
 
 <footer>
     <div class="monsa">
-    <address>
-        <div class="info-contacto">
-        GRUPO 1 , ELECTRO-HOGAR S.A. <br>
-        <a href="">electrohogar@electrohogar.com</a><br>
-        Calle Arenas 230 , Villa Humedales - Indonesia <br>
-        +62 66518-9214 
-        </div>
-        <div class="botoncontactanos">
-        <button>CONTACTANOS</button>
-        </div>
-    </address>
-</div>
-<div class="certus">
-    <span class="registro">
+        <address>
+            <div class="info-contacto">
+                <p>GRUPO 1 , ELECTRO-HOGAR S.A. <br>
+                <a href="">electrohogar@electrohogar.com</a><br>
+                Calle Arenas 230 , Villa Humedales - Indonesia <br>
+                +62 66518-9214</p>
+            </div>
+            <div class="botoncontactanos">
+                <button>CONTACTANOS</button>
+            </div>
+        </address>
+    </div>
+    <div class="certus">
+        <span class="registro">
         Todos los derechos reservados ELECTRO-HOGAR S.A. 2019
-    </span>
-</div>
+        </span>
+    </div>
 </footer> 
 </body>
 </html>
