--- a/prueba-jr.html
+++ b/prueba-jr.html
@@ -76,10 +76,9 @@
             </div>
         </div>
         <div id="contenedor_tec_fin">
-            <p id="contenedor_tec_fin_texto">Dolor nostrud aute nulla ex consequat cupidatat. <br>
-            In et amet tempor Lorem cupidatat ullamco quis consectetur incididunt Lorem excepteur. <br>
-            Cillum ad aliquip veniam eu magna Lorem non ipsum voluptate id deserunt.<br>
-            Proident voluptate ut sit quis reprehenderit. Eu do cillum minim eu ex voluptate labore anim duis ut.</p>
+            <p id="contenedor_tec_fin_texto">La tecnología Air Wash desodoriza y desinfecta tus prendas <br>
+                para que siempre estén frescas y limpias. Mediante aire caliente, <br>
+                remueve malos olores sin necesidad de agua o productos químicos.</p>
         </div>
     </div>
 </div>
