--- a/product01.html
+++ b/product01.html
@@ -5,77 +5,256 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DV90K6800EX Secadora SensorDry 9 kg</title>
+
     <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
     <link rel="stylesheet" href="CSS/principal.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/infproducto.css">
+    <link rel="stylesheet" href="CSS/product01.css">
+
+    <script src="JS/product01.js" defer></script>
 </head>
 <body>
-    <header>
-
-    </header>
-    <nav>
-
-    </nav>
-    <section>
-        <aside>
-          <ul class="tabla_filtro">
-            <li><div class="clasificacion_filtro"> Marca</div>
-              <ul class="filtro">
-                <li><input type="checkbox" name="filtro" id="LG">
-                 <label for="LG">LG</label></li>
-                <li><input type="checkbox" name="filtro" id="SAMSUNG">
-                 <label for="LG">SAMSUNG</label></li>
-              </ul>
-            </li>
-            <li><div class="clasificacion_filtro">Precio</div>
-             <ul class="filtro">
-               <li><input type="checkbox" name="filtro" id="precio1">
-                 <label for="precio1">S/.0.00-S/.799.99</label></li>
-               <li><input type="checkbox" name="filtro" id="precio2">
-                 <label for="precio2">S/.800.00-S/.999.99</label></li>
-               <li><input type="checkbox" name="filtro" id="precio3">
-                 <label for="precio3">S/.1,000.00-S/.1,199.99</label></li>
-               <li><input type="checkbox" name="filtro" id="precio4">
-                 <label for="precio4">S/.1,200.00-S/.1,399.99</label></li>
-               <li><input type="checkbox" name="filtro" id="precio5">
-                 <label for="precio5">S/.1,400.00-S/.1,799.99</label></li>
-               <li><input type="checkbox" name="filtro" id="precio6">
-                 <label for="precio6">S/.1,800.00-2,199.99</label></li>
-               <li><input type="checkbox" name="filtro" id="precio7">
-                 <label for="precio7">S/.2,200.00-superior</label></li>
-             </ul>
-            </li>
-            <li><div class="clasificacion_filtro" >Color</div>
-              <ul class="filtro">
-                <li><input type="checkbox" name="filtro" id="color1">
-                 <label for="color1">NEGRO</label></li>
-                <li><input type="checkbox" name="filtro" id="color1">
-                 <label for="color1">BLANCO</label></li>
-                <li><input type="checkbox" name="filtro" id="color1">
-                 <label for="color1">GRIS</label></li>
-              </ul>
-            </li>
-           </ul>
-
-        </aside>
-        <article>
-
-        </article>
-    </section>
+<header class="dtop1">
+  <div class="cabecera1">
+    <div class="cabecera-izq">
+      <img src="IMAGEN/youtube.png" alt="Youtube" width="20px"> &nbsp;
+      <img src="IMAGEN/whatsapp.png" alt="whats App" width="20px">&nbsp;
+      <img src="IMAGEN/facebook.png" alt="FaceBook" width="20px">&nbsp;
+      <img src="IMAGEN/twitter.png" alt="Twitter" width="20px">&nbsp;
+      <img src="IMAGEN/instagram.png" alt="Instagram" width="20px"> 
+    </div>
+    <div class="cabecera-centro"> 
+      <p>SABEMOS QUE ENCONTRARÁS LO QUE ESTAS BUSCANDO ;)</p>
+    </div>
+    <form>
+      <div class="cabecera-der">   
+        <button style="font-size: 11px; height: 22px; width: 90px;">MI CUENTA</button></a>
+          &nbsp;&nbsp;
+        <input type="text" name="busqueda" id="busqueda" placeholder="Buscar..." style="width: 100px;">
+      </div> 
+    </form>   
+  </div>
+  <nav id="" class="navegacion">
+    <div class="logo-texto">
+      <img src="IMAGEN/EH LOGO.png" alt="logo" height="140px" width="280px">
+    </div>
+    <ul id="" class="menu">
+      <li><a href="index.html"><b>HOME</b></a></li> |
+      <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
+      <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
+        <ul class="submenu">
+          <li><a href="">LG</a></li>
+          <li><a href="">BOSH</a></li>
+          <li><a href="">ELECTROLUZ</a></li>
+          <li><a href="">SAMSUNG</a></li>
+          <li><a href="">MABE</a></li>
+          <li><a href="">WINIA</a></li>
+          <li><a href="">PANASONIC</a></li>
+          <li><a href="">MIRAY</a></li>
+          <li><a href="">COLUMBIA</a></li>
+        </ul>
+      </li>
+    </ul>
+    <div class="carrito">
+      <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
+      <hr style="color: white; width: 145px;">
+      <p style="text-align: center;">0 Productos - S/. 0.0</p>
+    </div>
+  </nav>
+</header> 
+<section>
+  <aside>
+    <ul class="tabla_filtro">
+      <li><div class="clasificacion_filtro"> Marca</div>
+        <ul class="filtro">
+          <li><input type="checkbox" name="filtro" id="LG">
+            <label for="LG">LG</label></li>
+            <li><input type="checkbox" name="filtro" id="SAMSUNG">
+            <label for="LG">SAMSUNG</label></li>
+        </ul>
+      </li>
+      <li><div class="clasificacion_filtro">Precio</div>
+        <ul class="filtro">
+          <li><input type="checkbox" name="filtro" id="precio1">
+            <label for="precio1">S/.0.00-S/.799.99</label></li>
+          <li><input type="checkbox" name="filtro" id="precio2">
+            <label for="precio2">S/.800.00-S/.999.99</label></li>
+          <li><input type="checkbox" name="filtro" id="precio3">
+            <label for="precio3">S/.1,000.00-S/.1,199.99</label></li>
+          <li><input type="checkbox" name="filtro" id="precio4">
+            <label for="precio4">S/.1,200.00-S/.1,399.99</label></li>
+          <li><input type="checkbox" name="filtro" id="precio5">
+            <label for="precio5">S/.1,400.00-S/.1,799.99</label></li>
+          <li><input type="checkbox" name="filtro" id="precio6">
+            <label for="precio6">S/.1,800.00-2,199.99</label></li>
+          <li><input type="checkbox" name="filtro" id="precio7">
+            <label for="precio7">S/.2,200.00-superior</label></li>
+        </ul>
+      </li>
+      <li><div class="clasificacion_filtro" >Color</div>
+        <ul class="filtro">
+          <li><input type="checkbox" name="filtro" id="color1">
+            <label for="color1">NEGRO</label></li>
+          <li><input type="checkbox" name="filtro" id="color1">
+            <label for="color1">BLANCO</label></li>
+          <li><input type="checkbox" name="filtro" id="color1">
+            <label for="color1">GRIS</label></li>
+        </ul>
+      </li>
+    </ul>
+  </aside>
 </section>
     
-<section>
-  <article class="añadelo_compra">
-    <h1>AÑADELO A TU COMPRA</h1>
-    <span class="linea"></span>
-    <div  >
-      <a href="" ><img src="IMAGEN/lavadora1.jpg" alt=""></a>
-      <a href=""><img src="IMAGEN/lavadora2.jpg" alt=""></a>
-      <a href=""><img src="IMAGEN/lavadora3.jpg" alt=""></a>
-      <a href=""><img src="IMAGEN/lavadora4.jpg" alt=""></a>
-    </div>
-  </article>
+<section class="O-P">
+  <div class="barhor">
+      <div class="contenedor2">
+          <p>OFERTAS</p>
+          <ul class="list">
+              <li class="list2">PARA TI</li>
+              <li>FOUR YOU</li>
+              <li>PER A TU</li>
+          </ul>
+      </div>
+  </div>
+  <div class="grid">
+      <div class="bar4x4_1">
+          <div class="favimg2">
+              <img src="IMAGEN/lavadora2.jpg" 
+              alt="lav1" height="150px" width="150px">
+          </div>
+          <div class="textin1">
+              <p>Lavaseca<br>AddWash™</p>
+                  <p style="font-size: 15px;"><mark>70% Off</mark> &nbsp;&nbsp; &nbsp;&nbsp;</p> 
+          </div>
+      </div>
+      <div class="bar4x4_2">
+          <div class="favimg4">
+              <img src="IMAGEN/lavadora4.jpg" 
+              alt="lav2" height="150px" width="150px">
+          </div>
+          <div class="textin2">
+              <p>Lavadora <br>TurboWash 3D</p>
+              <p style="font-size: 15px;"><mark>50% Off</mark> &nbsp;&nbsp; &nbsp;&nbsp;</p> 
+          </div>
+      </div>
+      <div class="bar4x4_3">
+          <div class="favimg1">
+              <img src="IMAGEN/lavadora1.jpg" 
+              alt="lav3" height="150px" width="150px">
+          </div>   
+          <div class="textin3">
+              <p>Secadora<br>SensorDry 9kg</p>
+              <p style="font-size: 15px;"><mark>35% Off</mark> &nbsp;&nbsp; &nbsp;&nbsp;</p>
+          </div>     
+      </div>
+      <div class="bar4x4_4">
+          <div class="favimg3">
+              <img src="IMAGEN/lavadora3.jpg" 
+              alt="lav4" height="150px" width="150px">
+              </div>
+              <div class="textin4">
+                  <p>Lavadora<br>Fondo especial</p>
+                  <p style="font-size: 15px;"><mark>90% Off</mark> &nbsp;&nbsp; &nbsp;&nbsp;</p>
+              </div>
+      </div>
+  </div>
 </section>
+
+<section class="nave_tabs">
+  <div id="nav_ventanas_menu">
+    <p data-target="#contenedor_FT">Ficha Técnica</p>
+    <p data-target="#contenedor_tec">Descripción</p>
+</div>
+<div class="nav_ventanas">
+    <div data-content id="contenedor_FT" class="active">
+        <h1>Ficha Técnica</h1>
+        <br>
+        <table id="tablafichat">
+            <tr>
+                <th id="tablafichat_carac">CARACTERÍSTICAS</th>
+                <td id="tablafichat_carac_desc1">SensorDry <br><br>
+                Función Esterilizar <br><br>
+                Función Antiarrugas 
+                </td>
+            </tr>
+            <tr>
+                <th id="tablafichat_esp">ESPECIFICACIONES</th>
+                <td id="tablafichat_esp_desc2">Capacidad de secado <br>
+                9 Kg 
+                <br><br>
+                Especificaciones físicas <br>
+                600 x 850 x 655 mm
+                <br><br>
+                Peso neto <br>
+                40.4 kg
+                <br><br>
+                Tipo de tambor <br>
+                Tambor de diamante
+                <br><br>
+                Tipo de secadora <br>
+                Ventilación
+                </td>
+            </tr>
+            <tr>
+            <th id="tablafichat_list">LISTA DE OPCIONES</th>
+            <td id="tablafichat_list_desc3">Alarma de carga mixta, antiarrugas, mi ciclo,<br>
+            ajuste de tiempo, sonido, bloqueo para niños, luz del tambor</td>
+        </tr>
+        </table>
+    </div>
+    <br>
+    <div data-content id="contenedor_tec">
+        <h1>Descripción</h1>
+        <br>
+        <div id="contenedor_tec_sup">
+            <button id="contenedor_tec_sup_boton">SAMSUNG</button>
+            <a href="https://www.samsung.com/es/tecnologiaconproposito/" id="contenedor_tec_sup_texto">Conoce más...</a>
+        </div>
+        <div id="contenedor_tec_cent">
+            <div id="contenedor_tec_cent_1">
+                <img src="IMAGEN/ECOFRIEND.png" alt="ecofriend" height="100px" width="100px">
+                <p>Ecologico</p>
+            </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="contenedor_tec_cent_2">
+                <img src="IMAGEN/TECNOLOGÍA.png" alt="tecnología" height="100px" width="100px">
+                <p>Tecnología</p>
+            </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="contenedor_tec_cent_3">
+                <img src="IMAGEN/motor-samsung.png" width="100px" height="100px" alt="motor-s" id="contenedor_FT_T_centro_botonS">
+                <p>Motor</p>
+            </div>
+        </div>
+        <div id="contenedor_tec_fin">
+            <p id="contenedor_tec_fin_texto">La tecnología Air Wash desodoriza y desinfecta tus prendas <br>
+                para que siempre estén frescas y limpias. Mediante aire caliente, <br>
+                remueve malos olores sin necesidad de agua o productos químicos.</p>
+        </div>
+    </div>
+</div>
+</section>
+
+<footer>
+  <div class="monsa">
+      <address>
+          <div class="info-contacto">
+              <p>GRUPO 1 , ELECTRO-HOGAR S.A. <br>
+              <a href="">electrohogar@electrohogar.com</a><br>
+              Calle Arenas 230 , Villa Humedales - Indonesia <br>
+              +62 66518-9214</p>
+          </div>
+          <div class="botoncontactanos">
+              <button>CONTACTANOS</button>
+          </div>
+      </address>
+  </div>
+  <div class="certus">
+      <span class="registro">
+      Todos los derechos reservados ELECTRO-HOGAR S.A. 2019
+      </span>
+  </div>
+</footer> 
+
 </body>
 </html>
