--- a/seccion-lavanderia.html
+++ b/seccion-lavanderia.html
@@ -101,12 +101,22 @@
       </li>
     </ul>
   </aside>
-</section>
-
-    <section>
-        <div class="prdNuno">
-            
-        </div>
+  <div class="prdNuno">
+    <div class="imagen_LG">
+      <img src="IMAGEN/lavadora4.jpg" alt="lavadora LG" height="200px" width="200px">
+      </div>
+      <div class="division_imagen_LG">
+  
+          <section class="seccion">
+          <h1>LG</h1>
+          <h2>Lavadora 19kg WT19VS8</h2>
+          <p class="tarea_1">  <b> (2) <br> </p>
+           <p>  s/.  1,6400 c/u <br> </p>
+          <p>   Disponible para despacho <br> </p>
+            <p> Disponible para retiro </p>
+          </b>
+          </section> 
+  </div>
         <div class="prdNdos" >
             <img src="IMAGEN/lavadora1.jpg" alt="DV90K6800EX Secadora SensorDry 9 kg" height="200px" width="200px" >
             <p>DV90K6800EX Secadora SensorDry 9 kg</p>
