--- a/seccion-lavanderia.html
+++ b/seccion-lavanderia.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="CSS/principal.css">
     <link rel="stylesheet" href="CSS/seccion-lavanderia.css">  
 </head>
-<body>
+<body class="grid-container">
+
 <header class="dtop1">
   <div class="cabecera1">
     <div class="cabecera-izq">
@@ -59,8 +60,13 @@
       <p style="text-align: center;">0 Productos - S/. 0.0</p>
     </div>
   </nav>
-</header>   
-<section>
+</header>
+
+<section id="titulo_lavan">
+  <H1>SECCIÓN LAVANDERÍA</H1>
+</section>
+
+<section id="aside_lavand">
   <aside>
     <ul class="tabla_filtro">
       <li><div class="clasificacion_filtro"> Marca</div>
@@ -101,44 +107,84 @@
       </li>
     </ul>
   </aside>
-  <div class="prdNuno">
-    <div class="imagen_LG">
-      <img src="IMAGEN/lavadora4.jpg" alt="lavadora LG" height="200px" width="200px">
-      </div>
-      <div class="division_imagen_LG">
-  
-          <section class="seccion">
-          <h1>LG</h1>
-          <h2>Lavadora 19kg WT19VS8</h2>
-          <p class="tarea_1">  <b> (2) <br> </p>
-           <p>  s/.  1,6400 c/u <br> </p>
-          <p>   Disponible para despacho <br> </p>
-            <p> Disponible para retiro </p>
-          </b>
-          </section> 
-  </div>
-        <div class="prdNdos" >
-            <img src="IMAGEN/lavadora1.jpg" alt="DV90K6800EX Secadora SensorDry 9 kg" height="200px" width="200px" >
-            <p>DV90K6800EX Secadora SensorDry 9 kg</p>
-            <br>
-            <p>SensorDry,
-                Función Esterilizar,
-                Función Antiarrugas
-            </p>
-        </div>
-        <div class="prdNtres">
-
-        </div>
-        <div class="prdNcuatro">
-
-        </div>
-    </section>
 </section>
 
-    
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<footer>
+<section id="main-lavan">
+  <div id="main-lavan-prodc1-2">
+    <div class="prdNuno">
+      <div class="main-lavan-prodc-img">
+        <img src="IMAGEN/lavadora4.jpg" alt="lavadora LG" height="250px" width="250px">
+      </div>
+      <div class="division_imagen_LG">
+        <section class="seccion">
+          <h1>LG</h1>
+          <h2>Lavadora TurboWash 3D</h2>
+          <p class="tarea_1">19 kg / 6MotionDD (2)</p>
+          <p>s/. 1,999 c/u</p>
+          <p>Disponible para despacho</p>
+          <p>Disponible para retiro </p>
+        </section> 
+      </div>
+    </div>
+    <div class="prdNdos" >
+      <div class="main-lavan-prodc-img">
+        <img src="IMAGEN/lavadora1.jpg" alt="lavadora LG" height="250px" width="250px">
+      </div>
+      <section class="seccion">
+        <h1>SAMSUNG</h1>
+        <h2>Secadora SensorDry</h2>
+        <p class="tarea_1">9 kg (4)</p>
+        <p>s/. 2,640 c/u</p>
+        <p>Disponible para despacho</p>
+        <p>Disponible para retiro </p>
+      </section>
+    </div>
+  </div>
+  <div id="main-lavan-prodc3-4">
+    <div class="prdNtres">
+      <div class="main-lavan-prodc-img">
+        <img src="IMAGEN/lavadora3.jpg" alt="lavadora LG" height="250px" width="250px">
+      </div>
+      <div class="division_imagen_LG">
+        <section class="seccion">
+          <h1>LG</h1>
+          <h2>Lavadora inteligente</h2>
+          <p class="tarea_1">8,5kg / Serie 9(5)</p>
+          <p>s/. 1,230 c/u</p>
+          <p>Disponible para despacho</p>
+          <p>Disponible para retiro </p>
+        </section> 
+      </div>
+    </div>
+    <div class="prdNcuatro">
+      <div class="main-lavan-prodc-img">
+        <img src="IMAGEN/lavadora2.jpg" alt="lavadora LG" height="250px" width="250px">
+      </div>
+      <div class="division_imagen_LG">
+        <section class="seccion">
+          <h1>SAMSUNG</h1>
+          <h2>Lavaseca AddWash™</h2>
+          <p class="tarea_1">20 kg / 12 kg (10)</p>
+          <p>s/.  3,270 c/u</p>
+          <p>Disponible para despacho</p>
+          <p>Disponible para retiro </p>
+        </section> 
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="S-A">
+  <div class="prueba">
+      <span class="laundry pag"><a href="https://www.etsy.com/es/?ref=lgo"><h3>Click here: Encuentra cosas que te enamoren. Apoya a vendedores independientes. Solo en Etsy.</h3></a></span>
+      <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryWhash.jpg" alt="" width="150px" height="200px"></a></div>
+      <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryDry.jpg" alt="" width="150px" height="200px"></a></div>
+      <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryFold.jpg" alt="" width="150px"height="200px"></a></div>
+      <div class="laundry"><a href="https://www.etsy.com/es/?ref=lgo"><img src="IMAGEN/LaundryRepeat.jpg" alt="" width="150px" height="200px"></a></div>
+  </div>
+</section>
+
+<footer id="footer_lavan">
     <div class="monsa">
         <address>
             <div class="info-contacto">
