--- a/seccion-lavanderia.html
+++ b/seccion-lavanderia.html
@@ -80,19 +80,19 @@
       <li><div class="clasificacion_filtro">Precio</div>
         <ul class="filtro">
           <li><input type="checkbox" name="filtro" id="precio1">
-            <label for="precio1">S/.0.00-S/.799.99</label></li>
+            <label for="precio1">S/.0.00 - S/.799.99</label></li>
           <li><input type="checkbox" name="filtro" id="precio2">
-            <label for="precio2">S/.800.00-S/.999.99</label></li>
+            <label for="precio2">S/.800.00 - /.999.99</label></li>
           <li><input type="checkbox" name="filtro" id="precio3">
-            <label for="precio3">S/.1,000.00-S/.1,199.99</label></li>
+            <label for="precio3">S/.1,000.00 - S/.1,199.99</label></li>
           <li><input type="checkbox" name="filtro" id="precio4">
-            <label for="precio4">S/.1,200.00-S/.1,399.99</label></li>
+            <label for="precio4">S/.1,200.00 - S/.1,399.99</label></li>
           <li><input type="checkbox" name="filtro" id="precio5">
-            <label for="precio5">S/.1,400.00-S/.1,799.99</label></li>
+            <label for="precio5">S/.1,400.00 - S/.1,799.99</label></li>
           <li><input type="checkbox" name="filtro" id="precio6">
-            <label for="precio6">S/.1,800.00-2,199.99</label></li>
+            <label for="precio6">S/.1,800.00 - 2,199.99</label></li>
           <li><input type="checkbox" name="filtro" id="precio7">
-            <label for="precio7">S/.2,200.00-superior</label></li>
+            <label for="precio7">S/.2,200.00 - superior</label></li>
         </ul>
       </li>
       <li><div class="clasificacion_filtro" >Color</div>
