--- a/product01 copy.html
+++ b/product01 copy.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DV90K6800EX Secadora SensorDry 9 kg</title>
 
-    <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
     <link rel="stylesheet" href="CSS/principal.css">
+    <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
+    
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/product01.css">
+    <!--<link rel="stylesheet" href="CSS/product01.css">
 
-    <script src="JS/product01.js" defer></script>
-    <script src="CSS/productos.css"></script>
+    <script src="JS/product01.js" defer></script>-->
+    <link rel="stylesheet" href="CSS/productos.css">
 </head>
 <body>
-<header class="dtop1">
+<!--<header class="dtop1">
   <div class="cabecera1">
     <div class="cabecera-izq">
       <img src="IMAGEN/youtube.png" alt="Youtube" width="20px"> &nbsp;
@@ -62,7 +63,7 @@
       <p style="text-align: center;">0 Productos - S/. 0.0</p>
     </div>
   </nav>
-</header> 
+</header>-->
 <section>
   <aside class="aside">
     <ul class="tabla_filtro">
@@ -106,7 +107,7 @@
   </aside>
 </section>
     
-<section class="O-P">
+<!--<section class="O-P">
   <div class="barhor">
       <div class="contenedor2">
           <p>OFERTAS</p>
@@ -234,9 +235,9 @@
         </div>
     </div>
 </div>
-</section>
+</section>-->
 
-<footer>
+<!--<footer>
   <div class="monsa">
       <address>
           <div class="info-contacto">
@@ -255,7 +256,7 @@
       Todos los derechos reservados ELECTRO-HOGAR S.A. 2019
       </span>
   </div>
-</footer> 
+</footer>-->
 
 </body>
 </html>
