--- a/product01 copy.html
+++ b/product01 copy.html
@@ -105,6 +105,47 @@
       </li>
     </ul>
   </aside>
+  <article class="produtoanddescription">
+    <div>
+      <div>
+        <h1>Samsung</h1>
+        <h3>Lavadora 17kg WAt7T626BY</h3>
+        <h3>Modelo WAt7T6268Y | Código 391362X</h3>
+      </div>
+      <div>
+       <img src="IMAGEN/Lavadora_17kg.jpg" alt="Lavadora_17kg" width="100px">
+        <figcaption>
+        Lavadora 17kg WAt7T626BY
+        </figcaption>
+      </div>
+    </div>
+    <div id="tabladecap">
+      <div id="tb_cap"  >
+        <div>
+          <legend>Opciones de Entrega</legend>
+          <div id="domicilio">
+            <div><img src="" alt="domicilio"></div>
+            <div><h4>DISPONIBLE</h4></div>
+            <div><P>Despacho a domicilio</P></div>
+          </div>
+          <div id="retiro">
+            <div><img src="" alt="retiro"></div>
+            <div><h4>NO DISPONIBLE</h4></div>
+            <div><P>Retiro en tienda</P></div>
+          </div>
+          <div id="stock">
+            <div><img src="" alt="stock"></div>
+            <div><h4>NO DISPONIBLE</h4></div>
+            <div><P>Stock ene tienda</P></div> 
+          </div>
+        </div>
+      </div>
+      <div id="tr_cond">
+        <p><a href="#">Cambios y Condiciones</a> en nuestras tiendas a nivel nacional</p>
+      </div>
+      
+    </div>
+ </article>
 </section>
     
 <section class="O-P">
